dev/soludev/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-soludev
  namespace: soludev
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-soludev-console
  namespace: soludev
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - name: http-console
      port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: minio
